# Langford_BUG_FREE2

./: CMakeLists.txt  KnParrallelOMP.h  KnSequentiell.h  LangfordParrallel.h  LangfordParrallelOMP.h  LangfordSequentiell.h  main.cpp
